Fix FormLayoutGroup FormItem width with long top
When FormLayoutGroup has at least two FormItem inside and
first one has veeeery long text in top it overflows but also increases
width of the FormItem and makes second FormItem overflows
FormLayoutGroup

--- a/packages/vkui/src/components/FormLayoutGroup/FormLayoutGroup.module.css
+++ b/packages/vkui/src/components/FormLayoutGroup/FormLayoutGroup.module.css
@@ -2,6 +2,7 @@
   border: 0;
   padding: 0;
   margin: 0;
+  min-inline-size: auto;
 }
 
 .modeHorizontal {
